<resources>
    <string name="app_name">ShopInKarts</string>
    <string name="welcome_back_to_nshopinkarts">Welcome to \nShopinkarts</string>
    <string name="please_fill_the_below_details_to_continue">Please fill the below details to continue</string>
    <string name="phone">Phone</string>
    <string name="enter_phone_number">* Enter phone number</string>
    <string name="enter_password">* Enter password</string>
    <string name="password">Password</string>
    <string name="password_6">Password(min 6 chars)</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_select_one">Please Select One</string>
    <string name="personal_use">Personal Use</string>
    <string name="for_reselling">For Reselling</string>
    <string name="please_type_here">Please type here *</string>
    <string name="please_set_here">Please set here *</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="shopinkarts">Shopinkarts</string>
    <string name="shop_for">Shop For</string>
    <string name="men">Men</string>
    <string name="newly_added">Newly Added</string>
    <string name="view_all">VIEW ALL</string>
    <string name="linen_t_shirt">Linen T-Shirt</string>
    <string name="rs_100_rs_500">Rs 100 - Rs 500</string>
    <string name="_4_6">4.6</string>
    <string name="preferred_manufacturer">Preferred Manufacturer</string>
    <string name="polo">Polo</string>
    <string name="popular">Popular</string>
    <string name="popular_brand">Popular Brand</string>
    <string name="puma">Puma</string>
    <string name="flash_sale">FLASH SALE</string>
    <string name="flash">F\t\tL\t\tA\t\tS\t\tH\t\t\t\t\tS\t\tA\t\tL\t\tE</string>
    <string name="closing_in">Closing in  </string>
    <string name="_02">02</string>
    <string name="_35">35</string>
    <string name="_05">05</string>
    <string name="_10_off">10% OFF</string>
    <string name="view_all_flash_sale_products">View All  FLASH SALE  Products</string>
    <string name="t_shirts">T-Shirts</string>
    <string name="profile">Profile</string>
    <string name="_91_8945346789">+91 8945346789</string>
    <string name="rs_00">Rs 00</string>
    <string name="my_transactions">My Transactions</string>
    <string name="addresses">Addresses</string>
    <string name="customer_support">Customer Support</string>
    <string name="about_shopinkarts">About us</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="refund_policy">Refund Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="order_id">Order ID</string>
    <string name="sic0011">#SIC0011</string>
    <string name="_01_07_2022">01-07-2022</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="trn1234">#TRN1234</string>
    <string name="download_invoice">Download Invoice</string>
    <string name="explore_categories">Explore Categories</string>
    <string name="search_here">Search here</string>
    <string name="topwear">TOPWEAR</string>
    <string name="all_top_wear">All Top wear</string>
    <string name="bottomwear">BOTTOMWEAR</string>
    <string name="all_nbottomwear">All Bottomwear</string>
    <string name="all_accessories">All Accessories</string>
    <string name="accessories">Accessories</string>
    <string name="my_orders">My Orders</string>
    <string name="product_details">Product Details</string>
    <string name="id_002597">#Id - 002597</string>
    <string name="blazers_t_shirt_nike">Blazers T-shirt - Nike</string>
    <string name="rs_100_00">Rs 100.00</string>
    <string name="rs_300_00">Rs 300.00</string>
    <string name="_66_off">66 % OFF</string>
    <string name="few_units_left">Few Units Left</string>
    <string name="dispatched_in_2_3_days">Dispatched in 2 - 3 Days</string>
    <string name="free_delivery">FREE Delivery</string>
    <string name="select_color">Select Color</string>
    <string name="select_size">Select Size</string>
    <string name="quantity">Quantity</string>
    <string name="s">S</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="product_description">Product Description</string>
    <string name="product_checklist">Product Checklist</string>
    <string name="delivery_instructions">Delivery Instructions</string>
    <string name="delivery_ins">Delivery Instructions</string>
    <string name="delivery_for">for e.g, please deliver my order by 3pm</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="read_reviews_4">Read Reviews (4\t\t\t)</string>
    <string name="read_reviews">Read Reviews </string>
    <string name="similar_products">Similar Products</string>
    <string name="showcasing_281_t_shirts">Showcasing 281 T-Shirts</string>
    <string-array name="sorting">
        <item>Sorting</item>
        <item>Price - High to Low </item>
        <item>Price Low to High</item>
        <item>Newest First</item>
    </string-array>
    <string-array name="filter">
        <item>Filter</item>
        <item>Rs 499  and Below</item>
        <item>Rs 500 and Rs 999 </item>
        <item>Rs 1000 ans Rs 1999</item>
        <item>Rs 2000 and Above</item>

    </string-array>
    <string name="category">Category</string>
    <string name="your_cart">Your Cart</string>
    <string name="size">Size</string>
    <string name="m">M</string>
    <string name="qty">Qty</string>
    <string name="total_amount_rs_1000">Total Amount - Rs 1000</string>
    <string name="order_summary">Order Summary</string>
    <string name="total_amount">Total Amount</string>
    <string name="rs_4200">Rs 4200</string>
    <string name="discounts">Discounts</string>
    <string name="rs_2800">- Rs 2800</string>
    <string name="order_total">Order Total</string>
    <string name="rs_1400">Rs 1400</string>
    <string name="gst_18">GST ( 5% )</string>
    <string name="gst_no">GST Number</string>
    <string name="rs_252">Rs 252</string>
    <string name="amount_to_be_paid">Amount to be paid</string>
    <string name="rs_1652">Rs 1652</string>
    <string name="payment_method">Payment Method</string>
    <string name="congratulations_you_are_saving_66_on_this_order">Congratulations! You are saving 66% on \nthis order</string>
    <string name="continue_">CONTINUE</string>
    <string name="personal_details">Personal Details</string>
    <string name="name">Name</string>
    <string name="_91">+91</string>
    <string name="phone_number">Phone Number</string>
    <string name="flat_house_no_building_name">Flat / House No / Building Name</string>
    <string name="street_colony">Street / Colony</string>
    <string name="pin_code">Pin Code</string>
    <string name="city">City</string>
    <string name="landmark_optional">Landmark (optional)</string>
    <string-array name="state">
        <item>State</item>
        <item>Rajasthan</item>
        <item>Delhi</item>
        <item>Bombay</item>
        <item>Ajmer</item>
    </string-array>
    <string name="business_details">Business Details</string>
    <string name="company_name">Company Name</string>
    <string name="gst_in">GSTIN</string>
    <string name="business_operating_state">Business Operating State</string>
    <string name="complete_address">Complete Address</string>
    <string name="you_can_track_the_delivery">You can track the delivery in the \'Order\' section</string>
    <string name="go_to_your_orders">Go To Your Orders</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="email_details">A code is sent to your phone no 8233121212 Please enter the code below to continue</string>
    <string name="submit">Submit</string>
    <string-array name="state_business">
        <item>Business Operating State</item>
        <item>Rajasthan</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string name="password_reset">Password reset</string>
    <string name="please_reset_your_password">Please reset your password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reset">Reset</string>
    <string name="your_password_has_been_successfully_nchanged">Your password has been successfully\nchanged</string>
    <string name="order_success">ORDER SUCCESS</string>
    <string name="_20_may_2021">20 May, 2021</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="cod">COD</string>
    <string name="card">Card</string>
    <string name="order_id_sic0011">Order ID #SIC0011</string>
    <string name="pid_2031447">PID #2031447</string>
    <string name="track_order_status">Track Order Status</string>
    <string name="delivered">Delivered</string>
    <string name="accepted">Accepted</string>
    <string name="processing">Processing</string>
    <string name="out_for_delivery">Out For Delivery</string>
    <string name="track_order">Track Order #SIC0011</string>
    <string name="order_details">Order Details</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="sun_25th_jun_22">Sun, 25th Jun ‘22</string>
    <string name="wed_30th_jun_22">Wed, 30th Jun ‘22</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="brain_box">Brain Box</string>
    <string name="d32_sharma_colony_vaishali_nagar_jaipur">D32 Sharma Colony Vaishali Nagar, Jaipur</string>
    <string name="mobile_9999999999">Mobile - 9999999999</string>
    <string name="price_details">Price Details</string>
    <string name="order_return_7_days">Order Return(7 days)</string>
    <string name="invoice">Invoice</string>
    <string name="return_order">Return Order</string>
    <string name="damage_defective">Damage/ Defective</string>
    <string name="quality_not_good">Quality Not Good</string>
    <string name="size_issue">Size Issue</string>
    <string name="others">Others</string>
    <string name="description">Description</string>
    <string name="jon_deo">Jon Deo</string>
    <string name="_1_day_ago">1 day ago</string>
    <string name="tim_responded_to_your_feedback_request_view_feedback_n_now_tim_responded_to_your_feedback_request_view_feedback_now">“ Tim responded to your Feedback Request. View feedback\n now Tim responded to your Feedback Request. View feedback now. ”</string>
    <string name="xxl">XXL</string>
    <string name="amount">Amount</string>
    <string name="rs_200">Rs 200</string>
</resources>