<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/white">

        <ImageView
            android:id="@+id/imageIV"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:scaleType="fitXY"
            android:src="@drawable/newly_added_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/productNameTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m10"
            android:fontFamily="@font/dm_sans_medium"
            android:paddingVertical="@dimen/p4"
            android:text="@string/blazers_t_shirt_nike"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageIV"
            app:layout_constraintTop_toTopOf="@+id/imageIV" />

        <TextView
            android:id="@+id/dateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m14"
            android:paddingVertical="@dimen/p2"
            android:text="@string/_20_may_2021"
            android:textColor="@color/dark_Gray"
            android:textSize="@dimen/text_size_10"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/productNameTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/productNameTV" />

        <TextView
            android:id="@+id/totalAmountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m6"
            android:fontFamily="@font/dm_sans_medium"
            android:paddingVertical="@dimen/p2"
            android:text="@string/amount"
            android:textColor="@color/dark_Gray"
            android:textSize="@dimen/text_size_10"
            app:layout_constraintStart_toStartOf="@+id/productNameTV"
            app:layout_constraintTop_toBottomOf="@+id/productNameTV" />

        <TextView
            android:id="@+id/priceTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m14"
            android:fontFamily="@font/dm_sans_medium"
            android:paddingVertical="@dimen/p2"
            android:text="@string/rs_1652"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_10"
            app:layout_constraintBottom_toBottomOf="@+id/totalAmountTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/totalAmountTV" />

        <TextView
            android:id="@+id/paymentModeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m6"
            android:paddingVertical="@dimen/p2"
            android:text="@string/payment_mode"
            android:fontFamily="@font/dm_sans_medium"
            android:textColor="@color/dark_Gray"
            android:textSize="@dimen/text_size_10"
            app:layout_constraintStart_toStartOf="@+id/totalAmountTV"
            app:layout_constraintTop_toBottomOf="@+id/totalAmountTV" />

        <TextView
            android:id="@+id/codOnlineTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m14"
            android:paddingVertical="@dimen/p2"
            android:text="@string/cod"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_10"
            app:layout_constraintBottom_toBottomOf="@+id/paymentModeTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/paymentModeTV" />

        <TextView
            android:id="@+id/orderIdTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m6"
            android:paddingVertical="@dimen/p2"
            android:text="@string/order_id_sic0011"
            android:visibility="gone"
            android:textColor="@color/dark_Gray"
            android:textSize="@dimen/text_size_8"
            app:layout_constraintEnd_toEndOf="@+id/imageIV"
            app:layout_constraintStart_toStartOf="@+id/imageIV"
            app:layout_constraintTop_toBottomOf="@+id/imageIV" />

        <TextView
            android:id="@+id/pidTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/p2"
            android:paddingVertical="@dimen/p2"
            android:text="@string/pid_2031447"
            android:textColor="@color/dark_Gray"
            android:textSize="@dimen/text_size_8"
            app:layout_constraintEnd_toEndOf="@+id/imageIV"
            app:layout_constraintStart_toStartOf="@+id/imageIV"
            app:layout_constraintTop_toBottomOf="@+id/orderIdTV" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sizeQtyRV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m10"
            android:layout_marginBottom="@dimen/m10"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/paymentModeTV"
            app:layout_constraintTop_toBottomOf="@+id/paymentModeTV"
            tools:itemCount="2"
            tools:listitem="@layout/items_size_qty"

            />

        <TextView
            android:id="@+id/deliveredTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m14"
            android:layout_marginTop="@dimen/m10"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/m14"
            android:background="@drawable/shape_color_green"
            android:paddingHorizontal="@dimen/p10"
            android:paddingVertical="@dimen/p8"
            android:text="@string/delivered"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/codOnlineTV" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
