<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/p10">

        <TextView
            android:id="@+id/itemsNameTV"
            android:layout_width="@dimen/m100"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans_bold"
            android:singleLine="true"
            android:text="@string/puma"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/qtyValueTV"
            android:layout_width="@dimen/m20"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m10"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/_4"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintBottom_toBottomOf="@+id/itemsNameTV"
            app:layout_constraintStart_toEndOf="@+id/itemsNameTV"
            app:layout_constraintTop_toTopOf="@+id/itemsNameTV" />

        <TextView
            android:id="@+id/AmountValueTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m10"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/rs_1652"
            android:textColor="@color/primary_text"

            android:textSize="@dimen/text_size_12"
            app:layout_constraintBottom_toBottomOf="@+id/itemsNameTV"
            app:layout_constraintStart_toEndOf="@+id/qtyValueTV"
            app:layout_constraintTop_toTopOf="@+id/itemsNameTV" />

        <TextView
            android:id="@+id/taxesValueTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m20"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/rs_200"
            android:textColor="@color/primary_text"

            android:textSize="@dimen/text_size_12"
            app:layout_constraintBottom_toBottomOf="@+id/itemsNameTV"
            app:layout_constraintStart_toEndOf="@+id/AmountValueTV"
            app:layout_constraintTop_toTopOf="@+id/itemsNameTV" />

        <TextView
            android:id="@+id/totalAmountValueTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m5"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/rs_1652"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_12"
            app:layout_constraintBottom_toBottomOf="@+id/itemsNameTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/itemsNameTV" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>